--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 @article{alonso2019distributed,
   title={Distributed multi-robot formation control in dynamic environments},
-  author={Alonso-Mora, Javier and Montijano, Eduardo and N{\"a}geli, Tobias and Hilliges, Otmar and Schwager, Mac and Rus, Daniela},
+  author={J. Alonso-Mora and E. Montijano and T. N{\"a}geli and O. Hilliges and M. Schwager and D. Rus},
   journal={Autonomous Robots},
   volume={43},
   number={5},
@@ -11,71 +11,66 @@
 
 @book{baier2008principles,
   title={Principles of model checking},
-  author={Baier, Christel and Katoen, Joost-Pieter},
+  author={C. Baier and J.-P. Katoen},
   year={2008},
   publisher={MIT press}
 }
 
 @inproceedings{bansal2017safe,
   title={Safe sequential path planning of multi-vehicle systems under presence of disturbances and imperfect information},
-  author={Bansal, Somil and Chen, Mo and Fisac, Jaime F and Tomlin, Claire J},
-  booktitle={American Control Conference},
+  author={S. Bansal and M. Chen and J. F. Fisac and C. J. Tomlin},
+  booktitle={ACC},
   year={2017}
 }
 
+@inproceedings{BanusicMPSZ19pgcd,
+	author    = {G. B. Banusic and
+	R. Majumdar and
+	M. Pirron and
+	A{-}K. Schmuck and
+	D. Zufferey},
+	title     = {{PGCD:} robot programming and verification with geometry, concurrency,
+	and dynamics},
+	booktitle = {{ICCPS} 2019, Montreal, QC, Canada},
+	pages     = {57--66},
+	publisher = {{ACM}},
+	year      = {2019}
+}
+
 @article{Barto1983,
-	doi = {10.1109/tsmc.1983.6313077},
-	url = {https://doi.org/10.1109/tsmc.1983.6313077},
 	year = {1983},
 	month = sep,
 	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
 	volume = {{SMC}-13},
 	number = {5},
 	pages = {834--846},
-	author = {Andrew G. Barto and Richard S. Sutton and Charles W. Anderson},
+	author = {A.G. Barto and R.S. Sutton and C.W. Anderson},
 	title = {Neuronlike adaptive elements that can solve difficult learning control problems},
-	journal = {{IEEE} Transactions on Systems,  Man,  and Cybernetics}
+	journal = {{IEEE} Trans. Syst. Man Cybern. Syst.}
 }
 
-@inproceedings{BanusicMPSZ19pgcd,
-	author    = {Gregor B. Banusic and
-	Rupak Majumdar and
-	Marcus Pirron and
-	Anne{-}Kathrin Schmuck and
-	Damien Zufferey},
-	title     = {{PGCD:} robot programming and verification with geometry, concurrency,
-	and dynamics},
-	booktitle = {Proceedings of the 10th {ACM/IEEE} International Conference on Cyber-Physical
-	Systems, {ICCPS} 2019, Montreal, QC, Canada, April 16-18, 2019},
-	pages     = {57--66},
-	publisher = {{ACM}},
-	year      = {2019}
-}
 
 @inproceedings{Chen2018cbf,
-	author    = {Ji Chen and
-	Salar Moarref and
-	Hadas Kress{-}Gazit},
+	author    = {J. Chen and
+	S. Moarref and
+	H. Kress{-}Gazit},
 	title     = {Verifiable Control of Robotic Swarm from High-level Specifications},
-	booktitle = {Proceedings of the 17th International Conference on Autonomous Agents
-	and MultiAgent Systems, {AAMAS} 2018, Stockholm, Sweden, July 10-15,
-	2018},
+	booktitle = {{AAMAS}},
 	pages     = {568--576},
-	publisher = {International Foundation for Autonomous Agents and Multiagent Systems
-	Richland, SC, {USA} / {ACM}},
+	publisher = {{ACM}},
 	year      = {2018}
 }
 
 @book{choset2005principles,
   title={Principles of robot motion: theory, algorithms, and implementation},
-  author={Choset, Howie M and Hutchinson, Seth and Lynch, Kevin M and Kantor, George and Burgard, Wolfram and Kavraki, Lydia E and Thrun, Sebastian},
+  author={H.M. Choset and S. Hutchinson and K.M. Lynch and G. Kantor and W. Burgard and L. E. Kavraki and S. Thrun},
   year={2005},
   publisher={MIT press}
 }
 
 @INPROCEEDINGS{desai2017drona,
 	author={A. {Desai} and I. {Saha} and J. {Yang} and S. {Qadeer} and S. A. {Seshia}},
-	booktitle={2017 ACM/IEEE 8th International Conference on Cyber-Physical Systems (ICCPS)}, 
+	booktitle={ICCPS}, 
 	title={DRONA: A Framework for Safe Distributed Mobile Robotics}, 
 	year={2017},
 	volume={},
@@ -84,44 +79,103 @@
 
 @inproceedings{fan2020fast,
   title={Fast and Guaranteed Safe Controller Synthesis for Nonlinear Vehicle Models},
-  author={Fan, Chuchu and Miller, Kristina and Mitra, Sayan},
-  booktitle={International Conference on Computer Aided Verification},
+  author={C. Fan and K. Miller and S. Mitra},
+  booktitle={CAV},
   pages={629--652},
-  year={2020},
-  organization={Springer}
+  year={2020}
 }
 
 @inproceedings{fan2018controller,
   title={Controller synthesis made real: reach-avoid specifications and linear dynamics},
-  author={Fan, Chuchu and Mathur, Umang and Mitra, Sayan and Viswanathan, Mahesh},
-  booktitle={International Conference on Computer Aided Verification},
+  author={C. Fan and U. Mathur and S. Mitra and M. Viswanathan},
+  booktitle={CAV},
   pages={347--366},
-  year={2018},
-  organization={Springer}
+  year={2018}
 }
 
 @inproceedings{fisac2015reach,
   title={Reach-avoid problems with time-varying dynamics, targets and constraints},
-  author={Fisac, Jaime F and Chen, Mo and Tomlin, Claire J and Sastry, S Shankar},
-  booktitle={Proceedings of the 18th international conference on hybrid systems: computation and control},
+  author={J. F. Fisac and M. Chen and C.J. Tomlin and S.S. Sastry},
+  booktitle={HSCC},
   pages={11--20},
   year={2015}
 }
 
 @inproceedings{herbert2017fastrack,
   title={FaSTrack: A modular framework for fast and guaranteed safe motion planning},
-  author={Herbert, Sylvia L and Chen, Mo and Han, SooJean and Bansal, Somil and Fisac, Jaime F and Tomlin, Claire J},
-  booktitle={2017 IEEE 56th Annual Conference on Decision and Control (CDC)},
+  author={S. L. Herbert and M. Chen and S. Han and S. Bansal and J. F. Fisac and C.J. Tomlin},
+  booktitle={CDC},
   pages={1517--1522},
-  year={2017},
-  organization={IEEE}
+  year={2017}
 }
 
 @inproceedings{howell2019altro,
   title={ALTRO: A fast solver for constrained trajectory optimization},
-  author={Howell, Taylor A and Jackson, Brian E and Manchester, Zachary},
-  booktitle={2019 IEEE International Conference on Intelligent Robots and Systems, IEEE},
+  author={T.A. Howell and B.E. Jackson and Z. Manchester},
+  booktitle={IROS},
   year={2019}
+}
+
+
+@article{jackson2020scalable,
+	title={Scalable Cooperative Transport of Cable-Suspended Loads With UAVs Using Distributed Trajectory Optimization},
+	author={B.E. Jackson and T.A. Howell and K. Shah and M. Schwager and Z. Manchester},
+	journal={IEEE Robot. Autom. Lett.},
+	volume={5},
+	number={2},
+	pages={3368--3374},
+	year={2020},
+	publisher={IEEE}
+}
+
+@article{Kavraki1996rrt,
+	year = {1996},
+	publisher = {{IEEE}},
+	volume = {12},
+	number = {4},
+	pages = {566--580},
+	author = {L.E. Kavraki and P. Svestka and J.-C. Latombe and M.H. Overmars},
+	title = {Probabilistic roadmaps for path planning in high-dimensional configuration spaces},
+	journal = {IEEE Trans. Robot. Autom.}
+}
+
+
+@inproceedings{KhaledZ19pfaces,
+	author    = {M. Khaled and
+	M. Zamani},
+	title     = {pFaces: an acceleration ecosystem for symbolic control},
+	booktitle = {HSCC},
+	pages     = {252--257},
+	year      = {2019}
+}
+
+@book{LaValle2006,
+	year = {2006},
+	publisher = {Cambridge University Press},
+	author = {S. M. LaValle},
+	title = {Planning Algorithms}
+}
+@article{LaValle1998planning,
+	year = {1998},
+	volume = {14},
+	number = {6},
+	pages = {912--925},
+	author = {S.M. LaValle and S.A. Hutchinson},
+	title = {Optimal motion planning for multiple robots having independent goals},
+	journal = {IEEE Trans. Robot. Autom.}
+}
+
+@article{DBLP:journals/corr/abs-1911-09773,
+	author    = {P.{-}J. Meyer and
+	H. Yin and
+	A.H. Brodtkorb and
+	M. Arcak and
+	A. J. S{\o}rensen},
+	title     = {Continuous and discrete abstractions for planning, applied to ship
+	docking},
+	journal   = {CoRR},
+	volume    = {abs/1911.09773},
+	year      = {2019}
 }
 
 @article{DBLP:journals/tac/MeyerD19,
@@ -141,24 +195,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-1911-09773,
-  author    = {Pierre{-}Jean Meyer and
-               He Yin and
-               Astrid H. Brodtkorb and
-               Murat Arcak and
-               Asgeir J. S{\o}rensen},
-  title     = {Continuous and discrete abstractions for planning, applied to ship
-               docking},
-  journal   = {CoRR},
-  volume    = {abs/1911.09773},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1911.09773},
-  archivePrefix = {arXiv},
-  eprint    = {1911.09773},
-  timestamp = {Tue, 03 Dec 2019 14:15:54 +0100},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1911-09773.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
+
 
 @article{Gavran2017antlab,
 	year = {2017},
@@ -172,51 +209,31 @@
 	journal = {{ACM} Transactions on Embedded Computing Systems}
 }
 
-@article{Kavraki1996rrt,
-	year = {1996},
-	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
-	volume = {12},
-	number = {4},
-	pages = {566--580},
-	author = {L.E. Kavraki and P. Svestka and J.-C. Latombe and M.H. Overmars},
-	title = {Probabilistic roadmaps for path planning in high-dimensional configuration spaces},
-	journal = {{IEEE} Transactions on Robotics and Automation}
-}
-@inproceedings{KhaledZ19pfaces,
-	author    = {Mahmoud Khaled and
-	Majid Zamani},
-	title     = {pFaces: an acceleration ecosystem for symbolic control},
-	booktitle = {Proceedings of the 22nd {ACM} International Conference on Hybrid Systems:
-	Computation and Control, {HSCC} 2019, Montreal, QC, Canada, April
-	16-18, 2019},
-	pages     = {252--257},
-	publisher = {{ACM}},
-	year      = {2019}
+
+
+
+
+
+
+
+
+@article{reissig2016feedback,
+	title={Feedback refinement relations for the synthesis of symbolic controllers},
+	author={G. Reissig and A. Weber and M. Rungger},
+	journal={IEEE Trans. Automat. Contr.},
+	volume={62},
+	number={4},
+	pages={1781--1796},
+	year={2016}
 }
 
-@book{LaValle2006,
-	year = {2006},
-	publisher = {Cambridge University Press},
-	author = {Steven M. LaValle},
-	title = {Planning Algorithms}
-}
-@article{LaValle1998planning,
-	year = {1998},
-	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
-	volume = {14},
-	number = {6},
-	pages = {912--925},
-	author = {S.M. LaValle and S.A. Hutchinson},
-	title = {Optimal motion planning for multiple robots having independent goals},
-	journal = {{IEEE} Transactions on Robotics and Automation}
-}
-
-@book{Yang1997IntelligentP,
-	title={Intelligent planning - a decomposition and abstraction based approach},
-	author={Qiang Yang},
-	booktitle={Artificial intelligence},
-	year={1997}
-	publisher={Springer Berlin Heidelberg}
+@inproceedings{Rungger2016scots,
+	author    = {M. Rungger and
+	M. Zamani},
+	title     = {{SCOTS:} {A} Tool for the Synthesis of Symbolic Controllers},
+	booktitle = {{HSCC}},
+	pages     = {99--104},
+	year      = {2016}
 }
 
 @book{russel2010AIplanning,
@@ -228,99 +245,70 @@
 	year      = {2010}
 }
 
-
-@article{reissig2016feedback,
-  title={Feedback refinement relations for the synthesis of symbolic controllers},
-  author={Reissig, Gunther and Weber, Alexander and Rungger, Matthias},
-  journal={IEEE Transactions on Automatic Control},
-  volume={62},
-  number={4},
-  pages={1781--1796},
-  year={2016},
-  publisher={IEEE}
-}
-
-@inproceedings{Rungger2016scots,
-	author    = {Matthias Rungger and
-	Majid Zamani},
-	title     = {{SCOTS:} {A} Tool for the Synthesis of Symbolic Controllers},
-	booktitle = {Proceedings of the 19th International Conference on Hybrid Systems:
-	Computation and Control, {HSCC} 2016, Vienna, Austria, April 12-14,
-	2016},
-	pages     = {99--104},
-	publisher = {{ACM}},
-	year      = {2016}
-}
-
 @inproceedings{saha2016implan,
 	year = {2016},
 	month = apr,
 	publisher = {{IEEE}},
-	author = {Indranil Saha and Rattanachai Ramaithitima and Vijay Kumar and George J. Pappas and Sanjit A. Seshia},
+	author = {I. Saha and R. Rattanachai and V. Kumar and G. J. Pappas and S. A. Seshia},
 	title = {Implan: Scalable Incremental Motion Planning for Multi-Robot Systems},
-	booktitle = {2016 {ACM}/{IEEE} 7th International Conference on Cyber-Physical Systems ({ICCPS})}
+	booktitle = {ICCPS}
 }
 
 @INPROCEEDINGS{Shahin2017cltl,
 	author={Y. E. {Sahin} and P. {Nilsson} and N. {Ozay}},
-	booktitle={2017 ACM/IEEE 8th International Conference on Cyber-Physical Systems (ICCPS)}, 
+	booktitle={ICCPS}, 
 	title={Provably-Correct Coordination of Large Collections of Agents with Counting Temporal Logic Constraints}, 
 	year={2017},
 	volume={},
 	number={},
-	pages={249-258},}
+	pages={249-258}}
 
 @article{schmidt2008nonblocking,
   title={Nonblocking hierarchical control of decentralized discrete event systems},
-  author={Schmidt, Klaus and Moor, Thomas and Perk, Sebastian},
-  journal={IEEE Transactions on Automatic Control},
+  author={K. Schmidt and T. Moor and S. Perk},
+  journal={IEEE Trans. Automat. Contr.},
   volume={53},
   number={10},
   pages={2252--2265},
-  year={2008},
-  publisher={IEEE}
+  year={2008}
 }
 
 @inproceedings{singh2018robust,
   title={Robust tracking with model mismatch for fast and safe planning: an SOS optimization approach},
-  author={Singh, Sumeet and Chen, Mo and Herbert, Sylvia L and Tomlin, Claire J and Pavone, Marco},
-  booktitle={International Workshop on the Algorithmic Foundations of Robotics},
+  author={S. Singh and M. Chen and S.L. Herbert and C.J. Tomlin and M. Pavone},
+  booktitle={WAFR},
   pages={545--564},
-  year={2018},
-  organization={Springer}
+  year={2018}
 }
 
 @article{tedrake2010lqr,
   title={LQR-trees: Feedback motion planning via sums-of-squares verification},
-  author={Tedrake, Russ and Manchester, Ian R and Tobenkin, Mark and Roberts, John W},
-  journal={The International Journal of Robotics Research},
+  author={R. Tedrake and I. R. Manchester and M. Tobenkin and J.W. Roberts},
+  journal={Int. J. Robot. Res},
   volume={29},
   number={8},
   pages={1038--1052},
-  year={2010},
-  publisher={SAGE Publications Sage UK: London, England}
+  year={2010}
 }
 
 @article{tedrake2009lqr,
   title={LQR-Trees: Feedback motion planning on sparse randomized trees},
-  author={Tedrake, Russ},
+  author={R. Tedrake},
   year={2009},
   publisher={MIT Press}
 }
 
 @inproceedings{Yang2017milp,
 	year = {2017},
-	month = dec,
-	publisher = {{IEEE}},
-	author = {Liren Yang and Necmiye Ozay},
+	author = {L. Yang and N. Ozay},
 	title = {Provably-correct fault tolerant control with delayed information},
-	booktitle = {2017 {IEEE} 56th Annual Conference on Decision and Control ({CDC})}
+	booktitle = {CDC}
 }
 
 @article{wong1996hierarchical,
   title={Hierarchical control of discrete-event systems},
-  author={Wong, Kai C and Wonham, Walter Murray},
-  journal={Discrete Event Dynamic Systems},
+  author={K.C. Wong and W.M. Wonham},
+  journal={DISCRETE EVENT DYN S},
   volume={6},
   number={3},
   pages={241--273},
@@ -330,8 +318,8 @@
 
 @article{wongpiromsarn2012receding,
   title={Receding horizon temporal logic planning},
-  author={Wongpiromsarn, Tichakorn and Topcu, Ufuk and Murray, Richard M},
-  journal={IEEE Transactions on Automatic Control},
+  author={T. Wongpiromsarn, and U. Topcu and R.M. Murray},
+  journal={IEEE Trans. Automatic Contr.},
   volume={57},
   number={11},
   pages={2817--2830},
@@ -341,27 +329,24 @@
 
 @inproceedings{xiao2019merging,
 	year = {2019},
-	month = oct,
-	publisher = {{IEEE}},
-	author = {Wei Xiao and Christos G. Cassandras and Calin Belta},
+	author = {W. Xiao and C.G. Cassandras and C. Belta},
 	title = {Decentralized Merging Control in Traffic Networks with Noisy Vehicle Dynamics: a Joint Optimal Control and Barrier Function Approach},
-	booktitle = {2019 {IEEE} Intelligent Transportation Systems Conference ({ITSC})}
+	booktitle = {{ITSC}}
 }
 
 @inproceedings{xiao2020merging,
 	month = jul,
 	publisher = {{IEEE}},
-	author = {Wei Xiao and Christos G. Cassandras},
+	author = {W.Xiao and C.G. Cassandras},
 	title = {Decentralized Optimal Merging Control for Connected and Automated Vehicles with Optimal Dynamic Resequencing},
-	booktitle = {2020 American Control Conference ({ACC})}
+	booktitle = {{ACC}},
+	year={2020}
 }
-@article{jackson2020scalable,
-  title={Scalable Cooperative Transport of Cable-Suspended Loads With UAVs Using Distributed Trajectory Optimization},
-  author={Jackson, Brian E and Howell, Taylor A and Shah, Kunal and Schwager, Mac and Manchester, Zachary},
-  journal={IEEE Robotics and Automation Letters},
-  volume={5},
-  number={2},
-  pages={3368--3374},
-  year={2020},
-  publisher={IEEE}
+
+@book{Yang1997IntelligentP,
+	title={Intelligent planning - a decomposition and abstraction based approach},
+	author={Qiang Yang},
+	booktitle={Artificial intelligence},
+	year={1997}
+	publisher={Springer Berlin Heidelberg}
 }
