--- a/experiments.tex
+++ b/experiments.tex
@@ -56,7 +56,7 @@ Further, Fig.~\ref{fig:box_plot} illustrates variations of runtimes of the local
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/Box_plot.eps}
+	\includegraphics[width=0.45\textwidth]{figures/boxPlot2.eps}
 	\caption{Variations of runtimes of local ABCD among different agents for three case studies.}
 	\label{fig:box_plot}
 \end{figure}
@@ -64,23 +64,23 @@ Further, Fig.~\ref{fig:box_plot} illustrates variations of runtimes of the local
 \begin{figure*}[t]
     \large
      \centering
-     \begin{subfigure}[b]{0.24\textwidth}
+     \begin{subfigure}[b]{0.2\textwidth}
          \centering
-         \includegraphics[width=\textwidth]{figures/MA1.pdf}
+         \includegraphics[width=\textwidth]{figures/multidrone.pdf}
          \caption{}
          \label{fig:MA}
      \end{subfigure}
      \hfill
-     \begin{subfigure}[b]{0.5\textwidth}
+     \begin{subfigure}[b]{0.39\textwidth}
          \centering
-         \includegraphics[width=\textwidth]{figures/tubes10.eps}
+         \includegraphics[width=\textwidth]{figures/tr10_final.eps}
          \caption{}
          \label{fig:3dtubes}
      \end{subfigure}
      \hfill
-     \begin{subfigure}[b]{0.24\textwidth}
+     \begin{subfigure}[b]{0.4\textwidth}
          \centering
-         \includegraphics[width=\textwidth]{figures/dist_path_planning.pdf}
+         \includegraphics[width=\textwidth]{figures/multi_drone2.eps}
          \caption{}
          \label{fig:multi_drone_distance}
      \end{subfigure}
@@ -373,7 +373,7 @@ Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controll
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/dist_merging.pdf}
+	\includegraphics[width=0.45\textwidth]{figures/Merge_plot2.eps}
 	\caption{Performance of open-loop and feedback controllers in regulating distance between one vehicle and the road side for disturbance-free and perturbed situations for the lane merging example}
 	\label{fig:merging_distance}
 \end{figure}
@@ -437,7 +437,7 @@ whereas the feedback controller is still capable of maintaining distance above t
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/dist_formation.pdf}
+	\includegraphics[width=0.45\textwidth]{figures/formation_dist2.eps}
 	\caption{Performance of open-loop and feedback controllers in regulating distance between drones for disturbance-free and perturbed situations for the formation control example}
 	\label{fig:formation_distance}
 \end{figure}
@@ -456,6 +456,7 @@ whereas the feedback controller is still capable of maintaining distance above t
 %	Otherwise, the SCOTS would not be able to track the nominal trajectory within the given precision using any level of discretization. 
 %	\item For the ship example, applying the largest disturbance with which SCOTS is able to compute a controller, the trajectory resulted from using the open loop controller does not leave  $\varepsilon-$tube around it; in general magnitude of disturbance for which SCOTS can find a controller is relatively small for most of examples that we have tried.
 %\end{enumerate}
+
 
 
 
