modified:   experiments.tex 	modified:   figures/Algorithm_outline.pdf 	modified:   figures/Algorithm_outline.pptx 	modified:   references.bib

--- a/references.bib
+++ b/references.bib
@@ -318,7 +318,7 @@
 
 @article{wongpiromsarn2012receding,
   title={Receding horizon temporal logic planning},
-  author={T. Wongpiromsarn, and U. Topcu and R.M. Murray},
+  author={T. Wongpiromsarn and U. Topcu and R.M. Murray},
   journal={IEEE Trans. Automatic Contr.},
   volume={57},
   number={11},
@@ -347,6 +347,6 @@
 	title={Intelligent planning - a decomposition and abstraction based approach},
 	author={Qiang Yang},
 	booktitle={Artificial intelligence},
-	year={1997}
+	year={1997},
 	publisher={Springer Berlin Heidelberg}
 }
