--- a/experiments.tex
+++ b/experiments.tex
@@ -3,11 +3,17 @@
 \section{Experimental Evaluation}\label{sec:experiments}
 
 
-\begin{table*}
+\begin{table*}[t]
 	\large
 	\centering
 	\caption{Runtimes for four case studies.
-		\textmd{Runtimes (in seconds) for computing open-loop controllers over the corresponding product spaces using ALTRO ($T_{AL}$), number of input-state pairs of the finite abstraction for the local ABCD ($N_l$), abstraction and synthesis times for computing local feedback controllers using SCOTS ( respectively $T_{l}^{abs}$ and $T_{l}^{syn}$), number of input-state pairs of the finite state abstraction for the global ABCD ($N_g$), abstraction and synthesis times for computing a global controller for the product system using SCOTS (respectively $T_{g}^{abs}$ and $T_{g}^{syn}$). For local ABCD, the reported numbers correspond to the maximum value among all of the agents.}
+		\textmd{Run times (in seconds) for computing open-loop controllers over the corresponding product spaces using ALTRO ($T_{AL}$), 
+	number of input-state pairs of the finite abstraction for the largest ABCD task ($N_l$), 
+	abstraction and synthesis times in SCOTS for that task (respectively $T_{l}^{\mathit{abs}}$ and $T_{l}^{\mathit{syn}}$), 
+	number of input-state pairs of the finite state abstraction for the global ABCD ($N_g$), 
+	abstraction and synthesis times for computing a global controller for the product system using SCOTS (respectively $T_{g}^{\mathit{abs}}$ and $T_{g}^{\mathit{syn}}$). 
+	% For local ABCD, the reported numbers correspond to the maximum value among all of the agents.
+	}
 		\label{tab:runtimes}
 	}
 
@@ -19,7 +25,7 @@
 			Case-study&\multicolumn{1}{c}{Global planning}&
 			\multicolumn{3}{|c}{Local ABCD}&\multicolumn{3}{|c}{Global ABCD}\\
 			
-			&$T_{AL}$&$N_l$&$T_{l}^{abs}$&$T_{l}^{syn}$&$N_g$&$T_g^{abs}$&$T_g^{syn}$\\
+			&$T_{\mathit{AL}}$&$N_l$&$T_{l}^{\mathit{abs}}$&$T_{l}^{\mathit{syn}}$&$N_g$&$T_g^{\mathit{abs}}$&$T_g^{\mathit{syn}}$\\
 			\midrule
 			
 			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $1.15\times 10^8$ & $47.66$  & $7.9$& $2.73\times 10^{104}$&OOM&OOM \\
@@ -38,23 +44,32 @@
 \end{table*}
 
 
-%\MS{List the specifications of the cluster machine/laptop with which we have run our experiments.}
-We evaluate a prototype implementation of Alg.~\ref{alg:main}
-on two distinct category of problems: local reach-avoid problems with collision avoidance and global formation control problems. We also consider four case studies: multi-drone path planning, crane and vehicle, lane merging and multi-drone formation control. 
-The design of nominal controller has been performed on a laptop with core i7-4510u CPU at 3.10GHz, with 8GB of RAM.
-The formal controller synthesis has been performed on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
+We evaluate an implementation of Alg.~\ref{alg:main}
+on two distinct categories of problems: 
+local reach-avoid problems with collision avoidance and global formation control problems. 
+We consider four case studies: multi-drone path planning, crane and vehicle, lane merging, and multi-drone formation control. 
+The design of nominal controller was performed on a laptop with core i7-4510u CPU at 3.10GHz, with 8GB of RAM.
+The formal controller synthesis was performed on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of RAM. 
 
-%We consider , and demonstrate how they can be solved using our approach.
-In all of our case studies, robots are moving in a two-dimensional space that has obstacles. Table~\ref{tab:runtimes} shows runtimes for different stages of each experiment. For local ABCD, the reported numbers correspond to the maximum value among all of the agents. This choice is due to the fact that feedback controllers for different agents can be computed independently in parallel over different machines. Notice that a higher number of input-state pairs does not necessarily result in a higher runtime for local ABCD as the number of transitions and features of the parallel implementation can play a role. 
-
-We compare our approach with the ABCD applied to the product system to satisfy the global specification. As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD exceeds our system's limit (1.5TB of RAM) in all of the experiments.
+In all of our case studies, robots are moving in a two-dimensional space that has obstacles. 
+Table~\ref{tab:runtimes} shows run times for different stages of each experiment. 
+For local ABCD, the reported numbers correspond to the maximum value among all of the agents. 
+This choice is due to the fact that feedback controllers for different agents can be computed independently 
+in parallel over different machines. 
+To provide a more fine-grained comparison,
+Fig.~\ref{fig:box_plot} shows the variations of runtimes of the different local ABCD tasks for every experiment. 
+We have excluded the crane and vehicle case study in the figure due to an expected large variance originating from different dynamics.
+Notice that a higher number of input-state pairs does not necessarily result in a higher runtime for local ABCD as the 
+number of transitions and features of the parallel implementation can play a role. 
 %
-Further, Fig.~\ref{fig:box_plot} illustrates variations of runtimes of the local ABCD among different agents for every experiment solved by our approach. We have excluded in this figure the crane and vehicle case study due to an expectable large variance originating from different dynamics.
+We compare our approach with the ABCD applied to the product system to satisfy the global specification. 
+As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD exceeds our system's limit (1.5TB of RAM) in all of the experiments.
+%
  %\MS{For reporting number of input-state pairs and runtimes of local ABCD we could report total, average or maximum values; currently, Tab.~\ref{tab:runtimes} contains maximum values (taken over all of the agents, corresponding to multi-machine implementation), while total and average values are reported in the body of the paper. Data will be unified once the decision is made.}
 %Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallelized.
 %\begin{huge}
 
-\begin{figure}[h]
+\begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/boxPlot2.eps}
 	\caption{Variations of runtimes of local ABCD among different agents for three case studies.}
@@ -92,20 +107,23 @@ Further, Fig.~\ref{fig:box_plot} illustrates variations of runtimes of the local
 \subsection{Local reach-avoid problems for each robot}
 \label{sec:local reach-avoid}
 
-We first consider situations when the robots have got their individual reachability specifications, and they need to ensure a minimum safe distance from each other and the obstacles.
-We show how this case can be captured using the problem description outlined in Sec.~\ref{sec:problem}.
+We first consider situations when each robots has an individual reachability specification, 
+and they need to ensure a minimum safe distance from each other and the obstacles.
+% We show how this case can be captured using the problem description outlined in Sec.~\ref{sec:problem}.
 
-Suppose $\set{\Sigma^i}$ with $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$ models a set of robots, $\goal^i\subseteq X^i$ is the individual goal sets and $\delta \in \mathbb{R}_{>0}$ is a safety margin.
-%(We could also consider obstacles in the agent' own state spaces, in which case we had to additionally introduce safety margins in the state spaces.)
-%Without loss of generality, we assume that every robot is moving in the two-dimensional space.
-Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding the obstacle $\obs\subseteq \reals^2$ and collision with robots by the margin $\delta$.
-These requirements can be expressed as a reach-avoid specification on the product system $\Sigma^\times$ %as per the required form given in Sec.~\ref{sec:problem}, 
-as follows:
+Suppose $\set{\Sigma^i}$ 
+% with $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$ 
+models a set of robots, 
+$\goal^i\subseteq X^i$ are the individual goal sets, and $\delta \in \mathbb{R}_{>0}$ is a safety margin.
+Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ 
+while avoiding the obstacle $\obs\subseteq \reals^2$ and collision with robots by the margin $\delta$.
+The global specification on the product system $\Sigma^\times$ 
+is as follows:
 \begin{itemize}
 	\item The goal set $\goal\subseteq X^\times$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X^\times$, and
 	\item The avoid set $\avoid\subseteq X^\times$ is defined as 
 		\begin{align}
-			&\avoid \coloneqq\nonumber\\ 
+% 			&\avoid \coloneqq\nonumber\\ 
 				&\Set{ x^\times\in X^\times | 
 					\begin{array}{c}
 						\exists i\in [1;N]\;.\; D(x^i,\obs) \leq \delta\\
@@ -115,9 +133,9 @@ as follows:
 		\end{align}
 	where $x^i$ denotes the component of $x^\times$ corresponding to $\Sigma^i$, $d(\cdot,\cdot)$ denotes a predicate for measuring the geometric distance between positions of two systems located in the two-dimensional space, $D(\cdot,\cdot)$ denotes a predicate for measuring the geometric distance between position of one system and the obstacle $\obs\subseteq \reals^2$.
 \end{itemize}
-
-Once the sets $\goal$ and $\avoid$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
-
+%
+% Once the sets $\goal$ and $\avoid$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
+%
 In this category of problems, we apply our approach to three case studies as discussed next.
 
 %\textcolor{red}{
@@ -127,13 +145,13 @@ The threshold for minimum distance from the obstacle and other drones is chosen 
 The control objective is to synthesize a feedback controller for each drone so that in the presence of (bounded) disturbance, beginning from the specified initial state, the corresponding target state is reached within a finite horizon, while avoiding collision with other drones and the physical obstacle at every time point. 
 
 Every drone is modeled as tuple $\Sigma^i=(X,x_\init^i,U,W,f^d_\tau)$. %The set of state variables $X$ consists of $x_1$, $x_2$ and $x_3$ which denote position in $2D$ plane and movement angle, respectively. The set of input variables includes $u_1$ and $u_2$ which represent linear and angular speeds of each robot. 
-Continuous time dynamics for each drone takes the form
+The continuous time dynamics for each drone takes the form
 \begin{equation*}\label{eq:unicycle_ss}
 	f^{d}(x(t),u(t))=
 	\begin{bmatrix}
-		\dot{x_1}\\
-		\dot{x_2}\\
-		\dot{x_3}
+		\dot{x}_1\\
+		\dot{x}_2\\
+		\dot{x}_3
 	\end{bmatrix}=
 	\begin{bmatrix}
 		u_1cos(x_3)\\
@@ -141,7 +159,7 @@ Continuous time dynamics for each drone takes the form
 		u_2
 	\end{bmatrix}.
 \end{equation*}
-where $x_1$ and $x_2$ denote the drone's position in two-dimensional space, $x_3$ denotes the rotational angle, and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1$, nominal dynamics $f^d_\tau$ can be characterized uniquely. %Further, the output mapping is defined as
+where $x_1$ and $x_2$ denote the drone's position in two-dimensional space, $x_3$ denotes the rotational angle, and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1s$, the nominal dynamics $f^d_\tau$ can be characterized uniquely. %Further, the output mapping is defined as
 %\[
 %h^d(x(t))=\begin{bmatrix}
 %	x_1\\x_2
@@ -169,7 +187,16 @@ $U=[-2.4,2.4]^2$, respectively. Choosing  $\eta_{X}=\begin{bmatrix}0.02&0.02&0.0
 
 
 On the other hand, using ALTRO alone would not provide guarantee against bounded disturbance.  %By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectories are followed.
-Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the two of drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the defined threshold. Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.025&-0.025\end{bmatrix}^T$ are being applied to the two drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid yellow) to go blow the predefined threshold. However, the feedback controller is capable of maintaining distance (shown in solid red) within the safe region when the same disturbance is being applied.
+Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the two of 
+the drones with and without disturbance. 
+As expected, in the absence of disturbance, the open-loop controller suffices and distance between the two drones (shown in solid blue) 
+does not go below the defined threshold. 
+Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ 
+and $\begin{bmatrix}0 &-0.025&-0.025\end{bmatrix}^T$ are being applied to the two drones throughout the whole horizon. 
+\RM{shouldn't the disturbance bound be stated earlier, before using SCOTS?}
+It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid yellow) to 
+go below the predefined threshold. 
+However, the feedback controller is capable of maintaining distance (shown in solid red) within the safe region when the same disturbance is being applied.
 
 
 %In this example, we are focusing on number of robots. This example consist of 10 identical unicycle model. Each unicycle should start from its own initial point and reach target set which is shown in Fig. \ref{fig:MA} with green points and red points. while it avoids obstacles and collision with other agents. Unicycle model is described in below.
@@ -215,20 +242,22 @@ Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and fee
 \subsubsection{Crane and Vehicle}
 \label{subsec}
 The goal of this example is to study performance of our method for controlling a number of robots with different dynamics. %Consider a production line wherein a crane (modeled as a cart-pole system) puts some items at certain points and a forklift is in charge of picking these items up. It is assumed that at its lowest height the crane's hook is positioned such that the forklift cannot pass. In particular, Fig.~\ref{fig:cr_and_lft_2} shows a scenario wherein the crane (initially positioned toward left of the boom) needs to unload at the other end of the boom. At the same time, the forklift (initially positioned near the right end of the boom) needs to pick some item locating near the left end of the boom. The goal is to control both the crane and the forklift so that the forklift reaches the object without colliding with the crane. 
-We model the crane and vehicle by tuples $\Sigma^1=(X^1,x_\init^1,U^1,W^1,f_\tau^c)$ and $\Sigma^2=(X^2,x_\init^2,U^2,W^2,f_\tau^l)$, respectively. The crane is modeled as cart-pole system taking the form \cite{Barto1983}:
+We model the crane and vehicle by tuples $\Sigma^1=(X^1,x_\init^1,U^1,W^1,f_\tau^c)$ and $\Sigma^2=(X^2,x_\init^2,U^2,W^2,f_\tau^l)$, respectively. 
+The crane is modeled as cart-pole system \cite{Barto1983}:
 \begin{align*}
 	\ddot{\theta} &= \frac{M_tg\sin(\theta) - \cos(\theta)(F + M_pl \dot{\theta}^2 \sin(\theta))}{l(4/3 M_t- M_p \cos^2(\theta))}=f^c_1(\theta,\dot{\theta},F)\\
 	\ddot{z}&= \frac{F + M_pl \dot{\theta}^2 \sin(\theta)-M_pl \ddot{\theta} \cos(\theta)}{M_t}=f^c_2(\theta,\dot{\theta},F),
 \end{align*}
 where
-\begin{itemize}
-	\item[] $g=-9.8$ $m/s^2$ is the acceleration of gravity,
-	\item[] $M_c=1$ kg is the cart mass,
-	\item[] $M_p=0.1$ kg is the pole mass,
-	\item[] $M_t=M_c+M_p$ denotes the total mass,
-	\item[] $l=0.5$ m is the half-pole length.
-\end{itemize}
-Further, cart's position, pole's angle and input force to the cart are denoted by $x_1^{(1)}=z$, $x_3^{(1)}=\theta$ and $u^{(1)}=F$, respectively. Continuous-time dynamics of the crane is of the following form:
+	$g=-9.8$ $m/s^2$ is the acceleration of gravity,
+	$M_c=1$ kg is the cart mass,
+	$M_p=0.1$ kg is the pole mass,
+	$M_t=M_c+M_p$ denotes the total mass,
+and
+	$l=0.5$ m is the half-pole length.
+Further, the cart's position, the pole's angle, and input force to the cart are denoted by $x_1^{(1)}=z$, $x_3^{(1)}=\theta$, 
+and $u^{(1)}=F$, respectively. 
+The continuous-time dynamics of the crane is of the following form:
  %for which the set of state variables $X^1$ consists of $x_1^{(1)}$, $x_2^{(1)}$, $x_3^{(1)}$ and $x_4^{(1)}$ denoting (linear) position and speed of the cart and (angular) position and speed of the pole, respectively. The set of input variables includes $u_1^{(1)}$ which represents linear acceleration of the cart. Finally, crane's dynamics takes the form for an inverted pendulum (see, e.g., \cite{barto1983neuronlike}) and can be written as
 \[f^{c}(x^{(1)}(t),u^{(1)}(t))=\begin{bmatrix}
 	\dot{x}_1^{(1)}\\
@@ -264,7 +293,8 @@ The vehicle's continuous-time dynamics takes the form of
 \[f^{l}(x^{(2)}(t),u^{(2)}(t))=\begin{bmatrix}
 \dot{x}_1^{(2)}\\ \dot{x}^{(2)}_2 \end{bmatrix}=\begin{bmatrix} x^{(2)}_2\\ u^{(2)} \end{bmatrix},
 \]
-where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed and $u^{(2)}$ represents the vehicle's control input (acceleration). Fixing the sampling time $\tau=0.1$, one can derive $f^c_\tau$ and $f^l_\tau$. %The output mapping for the crane is defined as
+where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed and $u^{(2)}$ represents the vehicle's control input (acceleration). 
+On fixing the sampling time $\tau=0.1s$, one can derive $f^c_\tau$ and $f^l_\tau$. %The output mapping for the crane is defined as
 %\[
 %h^l=\begin{bmatrix}
 %	x_1^{(2)}\\
@@ -274,8 +304,11 @@ where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed and $u
 %where, $y_2>0$ is a constant that denotes the height of the forklift's head with respect to the ground.
 
 %As promised, we use ALTRO in the first step to generate a valid trajectory for the case that $W=\{0\}$. 
+\RM{shouldn't the disturbance model be described before?}
+%
 There is no obstacle for this example and for minimum distance between the crane and the vehicle we choose $\delta=0.035$. %$\delta=\begin{bmatrix}0.035&0.2\end{bmatrix}^T$. 
 Fixing the horizon length to $T=70$, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. Fig.~\ref{fig:cr_and_lft} (\textbf{left}) demonstrates snapshots of the produced trajectory. Surprisingly enough, applying (constant) additive disturbance $W=\begin{bmatrix}0&0.05&0&0\end{bmatrix}^T$ (to the cart-pole system) causes collision between the crane and vehicle before the end of the mission (Fig.~\ref{fig:cr_and_lft} (\textbf{right})).
+\RM{shouldn't $\varepsilon$ be described here?}
 
 In the next step, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W^1|\leq\begin{bmatrix}0&0.05&0&0\end{bmatrix}^T$ for the crane and $|W^2|\leq\begin{bmatrix}0&0.1\end{bmatrix}^T$ for the vehicle. %We note that the selection of tube sizes need to satisfy the following inequality:
 %\[ \delta_{col}> \varepsilon_{1}^{(1)} + l\times\varepsilon_{3}^{(1)} + \varepsilon_{1}^{(2)},\]
@@ -347,10 +380,15 @@ Finally, we study a lane merging problem wherein multiple controlled vehicles ar
 %\[
 %h^v(x(t))=x(t).
 %\]
+\RM{shouldn't disturbance model be given up front?
+Shouldn't $\varepsilon$ be an input to ALTRO?}
 The nominal dynamics for each of the vehicles is the same as the one  for modeling drones (given in Sec.~\ref{sec:Multirobot}). %($\Sigma^i=(X,x_\init^i,U,W,f^d_\tau)$). 
 For collision and obstacle avoidance, we choose $\delta=0.37$. %$\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. 
-The horizon length is fixed to $T=110$. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Next, we use SCOTS in order to compute feedback controllers tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. %These selections yield discretized models with abstract state and input spaces having $2.1\times 10^7$ and $406$ points. 
-Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.16\end{bmatrix}^T$. %This reduces size of state space into $1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $159.6$ seconds ($26.6$ seconds in average) and synthesize controllers in $40.8$ seconds ($6.8$ seconds in average).
+The horizon length is fixed to $T=110$. 
+Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. 
+Next, we use SCOTS in order to compute feedback controllers tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. %These selections yield discretized models with abstract state and input spaces having $2.1\times 10^7$ and $406$ points. 
+Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.16\end{bmatrix}^T$. 
+%This reduces size of state space into $1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $159.6$ seconds ($26.6$ seconds in average) and synthesize controllers in $40.8$ seconds ($6.8$ seconds in average).
 Tab.~\ref{tab:runtimes} illustrates list of runtimes and number of input-state pairs corresponding to local and global ABCD. Noticeably, for number of agents $N>1$, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). Fig.~\ref{fig:merge} demonstrates snapshots of one sample trajectory when feedback controllers are employed under the presence of disturbance. It should be noticed that using ALTRO alone would not provide guarantee against bounded disturbance.
 Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controller fails in keeping one of the vehicles away from the road's sides under perturbed situation when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied throughout the whole horizon. In contrast, emplying feedback controller results in successful lane merging. %Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between of the vehicles from the road's sides with and without disturbance. In the absence of disturbance open-loop controller is capable of maintaing a minimum distance from the road's sides. Next, we consider the case when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied to the vehicle throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance from the road's side (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
 
@@ -367,7 +405,7 @@ Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controll
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[scale=.2]{figures/merge.pdf}
+	\includegraphics[scale=.21]{figures/merge.pdf}
 	\caption{Illustration of a (sample) trajectory generated by formally guaranteed feedback controllers for the lane merging example}
 	\label{fig:merge}
 \end{figure}
@@ -382,26 +420,29 @@ Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controll
 
 \subsection{Global formation control problem}\label{sec:global formation control}
 
-The second category of example, that we are about to present, is about maintaining a global formation while satisfying a set of reach-avoid specifications.
-We show how the formation control problem can be expressed using a static obstacle $\avoid$ on the product state space $X^\times$, as required by the problem setup in Sec.~\ref{sec:problem}.
+The second category of examples are about maintaining a global formation while satisfying a set of reach-avoid specifications.
+We show how the formation control problem can be expressed using a static obstacle $\avoid$ on the product state space $X^\times$.
 
-Let us first formalize the notion of formation.
+Let us first formalize the notion of \emph{formation}.
 Let $\Set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ be a set of robots.
-A \emph{formation constraint} is a set $\Set{\lambda^{i,j}\in \mathbb{R}}_{i,j\in [1;N]}$ where every $\lambda^{i,j}$ specifies the relative \emph{euclidean} distance between the projections of state of robot $\Sigma^i$ and robot $\Sigma^j$ over the shared output space $Y$.
+A \emph{formation constraint} is a set $\Set{\lambda^{i,j}\in \mathbb{R}}_{i,j\in [1;N]}$ where every $\lambda^{i,j}$ specifies the relative \emph{Euclidean} 
+distance between the projections of state of robot $\Sigma^i$ and robot $\Sigma^j$ \RM{undef:} over the shared output space $Y$.
 %(We use euclidean distance to define formation, as opposed to the distance $D$ used in the rest of the paper, to allow rotation of the formation while moving.)
 
-Now suppose $\goal^i\subseteq X^i$ is the individual goal states, $\obs\subset \reals^2$ is a common obstacle in the output space, $\delta \in \mathbb{R}^2_{>0}$ is a safety margin, and $\mu\in \mathbb{R}_{>0}$ is a tolerance margin for the formation constraint.
-The formation control problem then asks to generate controllers $\set{C_i}$ such that every robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\obs$ by the margin $\delta$, as well as while making sure that the \emph{euclidean} distance between robot $\Sigma^i$ and $\Sigma^j$ is in the range $\lambda^{i,j} \pm \mu$.
-Essentially the tolerance margin $\mu$ is to account for the possible slight deviations due to disturbances experienced by the robots. Notice that since the robots have their own goals, and at the same time they need to ``stay close'' to their neighboring robots in the formation for the entire period, hence they might first need to accompany the other robots to their goals, before being accompanied by them to reach its own goal.
-
-%Let $D_e\colon \mathbb{R}^n\times \mathbb{R}^n\to \mathbb{R}^p_{\geq0}$ denote the euclidean distance.
+Now suppose $\goal^i\subseteq X^i$ are the individual goal states, $\obs\subset \reals^2$ is a common obstacle in the \RM{undef:} output space, 
+$\delta \in \mathbb{R}^2_{>0}$ is a safety margin, and $\mu\in \mathbb{R}_{>0}$ is a tolerance margin for the formation constraint.
+The formation control problem then asks to generate controllers $\set{C_i}$ such that every robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\obs$ 
+by the margin $\delta$, as well as while making sure that the \emph{Euclidean} distance between robots $\Sigma^i$ and $\Sigma^j$ is in the range $\lambda^{i,j} \pm \mu$.
+Essentially the tolerance margin $\mu$ is to account for the possible slight deviations due to disturbances experienced by the robots. 
+Notice that since the robots have their own goals but at the same time they need to ``stay close'' to their neighboring robots in the formation for the entire period, 
+they might first need to accompany the other robots to their goals, before being accompanied by them to reach their own goal.
 
 We can express the formation control problem in the product state space as follows:
 \begin{itemize}
 	\item The goal set $\goal\subseteq X^\times$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X^\times$, and
 	\item The static obstacle $\avoid\subseteq X^\times$ is defined as 
 		\begin{align}
-			&\avoid \coloneqq\nonumber\\ 
+%			&\avoid \coloneqq\nonumber\\ 
 			&\Set{ x^\times\in X^\times | 
 				\begin{array}{c}
 					\exists i\in [1;N]\;.\; D(x^i,\obs) \leq \delta\\
@@ -423,16 +464,28 @@ The nominal dynamics for each of the drones is the same as the one  given in Sec
 %Synthesizing local controllers for every drone such that the specifications hold for the perturbed models, is performed similar to the previous examples. 
 %We follow the steps outlined in Alg.~\ref{alg:abcd-with-time-for-tracking} to 
 Next, we synthesize local controllers for every drone such that the specifications hold for the perturbed models with $|W|\leq \begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$ and $\mu=0.5$. %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector $\varepsilon=\begin{bmatrix}??&??&??\end{bmatrix}^T$.
+\RM{the state space should go before ALTRO}
 We consider state and input spaces to be $X=[-2,17]\times[-2,17]\times[0.6,1.6]$ and
 $U=[-0.9,4.8]\times[-3,3]$, respectively. We select $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
 $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$ and $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$.% results in state and input spaces with $10^9$ and $820$ points. 
 %Computing the transition system over inter-tube space with width $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$ results in smaller transition system with $4.9\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $271$ seconds ($54.2$ seconds in average) and $66.5$ seconds ($13.3$ seconds in average). 
-Tab.~\ref{tab:runtimes} illustrates list of runtimes and number of input-state pairs corresponding to local and global ABCD. Noticeably, for number of agents $N>1$, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). Fig.~\ref{fig:formation_ex} illustrates four sequential frames of a sample trajectory generated by employing feedback controllers. Surprisingly, both of the relative position and orientation between drones are kept (almost) constant throughout the journey. On the other hand, using ALTRO alone would not provide guarantee against bounded disturbance. Fig.~\ref{fig:formation_distance} illustrates performance of open-loop and feedback controllers on regulating distance between two of the drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line. However, when constant additive disturbance vectors $\begin{bmatrix}0 &0.03&0.03\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.03&-0.03\end{bmatrix}^T$ are being applied to the two drones throughout the whole horizon, open-loop controller fails, % that distance between the two drones (shown in solid green) becomes smaller than $\delta$. However, 
+Tab.~\ref{tab:runtimes} illustrates list of runtimes and number of input-state pairs corresponding to local and global ABCD. 
+When the number of agents $N>1$, the memory requirement for global ABCD exceeds our limits (1.5TB of RAM). 
+Fig.~\ref{fig:formation_ex} illustrates four sequential frames of a sample trajectory generated by employing feedback controllers. 
+\RM{why is this surprising:} Surprisingly, both of the relative position and orientation between drones are kept (almost) constant 
+throughout the journey. 
+On the other hand, using ALTRO alone would not provide guarantee against bounded disturbance. 
+Fig.~\ref{fig:formation_distance} illustrates performance of open-loop and feedback controllers on regulating distance between two of the 
+drones with and without disturbance. 
+\RM{disturbance should go before the description of the algorithm's outputs}
+As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line. 
+However, when constant additive disturbance vectors $\begin{bmatrix}0 &0.03&0.03\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.03&-0.03\end{bmatrix}^T$ 
+are being applied to the two drones throughout the whole horizon, open-loop controller fails, 
 whereas the feedback controller is still capable of maintaining distance above the given threshold.
 
  \begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/formation.pdf}
+	\includegraphics[scale=0.22]{figures/formation.pdf}
 	\caption{Illustration of a (sample) trajectory generated by formally guaranteed feedback controllers for the robot formation control example}
 	\label{fig:formation_ex}
 \end{figure}
