--- a/references.bib
+++ b/references.bib
@@ -236,6 +236,14 @@
 	year      = {2016}
 }
 
+@article{Rodionova2020LearningtoFlyLC,
+	title={Learning-to-Fly: Learning-based Collision Avoidance for Scalable Urban Air Mobility},
+	author={A. Rodionova and Y. Pant and K. Jang and H. Abbas and Rahul Mangharam},
+	journal={ArXiv},
+	year={2020},
+	volume={abs/2006.13267}
+}
+
 @book{russel2010AIplanning,
 	author    = {Stuart J. Russell and
 	Peter Norvig},
@@ -263,6 +271,15 @@
 	number={},
 	pages={249-258}}
 
+@INPROCEEDINGS{Srinivasan2018,
+	author={M. {Srinivasan} and S. {Coogan} and M. {Egerstedt}},
+	booktitle={CDC}, 
+	title={Control of Multi-Agent Systems with Finite Time Control Barrier Certificates and Temporal Logic}, 
+	year={2018},
+	volume={},
+	number={},
+	pages={1991-1996}}
+
 @article{schmidt2008nonblocking,
   title={Nonblocking hierarchical control of decentralized discrete event systems},
   author={K. Schmidt and T. Moor and S. Perk},
@@ -281,6 +298,14 @@
   year={2018}
 }
 
+@INPROCEEDINGS{sun2019,
+	author={X. {Sun} and R. {Nambiar} and M. {Melhorn} and Y. {Shoukry} and P. {Nuzzo}},
+	booktitle={ICRA}, 
+	title={DoS-Resilient Multi-Robot Temporal Logic Motion Planning}, 
+	year={2019},
+	volume={},
+	number={},
+	pages={6051-6057}}
 @article{tedrake2010lqr,
   title={LQR-trees: Feedback motion planning via sums-of-squares verification},
   author={R. Tedrake and I. R. Manchester and M. Tobenkin and J.W. Roberts},
