--- a/related_work.tex
+++ b/related_work.tex
@@ -17,9 +17,9 @@ two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018
 In contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require finding 
 a linear mapping between the low and high dimensional models. 
 While we choose SCOTS because the algorithm can be effectively parallelized \cite{KhaledZ19pfaces}, in principle, we could
-also use SOS or Hamilton Jacobi approaches.
-Some other works that only consider special classes of systems such as linear (\cite{fan2018controller,wongpiromsarn2012receding}), 
-disturbance-free (\cite{tedrake2010lqr,fan2020fast}), or finite transition systems (\cite{Yang2017milp}). 
+also use SOS or Hamilton Jacobi approaches. The existing schemes that solve the guaranteed motion planning problems in a centralized manner (e.g. \cite{sun2019}) cannot scale well.
+Some other works that only consider special classes of systems such as linear (\cite{fan2018controller,wongpiromsarn2012receding,Rodionova2020LearningtoFlyLC}), 
+disturbance-free (\cite{tedrake2010lqr,fan2020fast,Srinivasan2018}), or finite transition systems (\cite{Yang2017milp}). 
 In contrast, our method supports arbitrary continuous time nonlinear dynamics and provides a guarantee 
 against worst-case bounded disturbance.
 	
