--- a/theory.tex
+++ b/theory.tex
@@ -287,6 +287,6 @@ The synthesis of tracking controller using ABCD is indeed successful when we fee
 However, if we use a geometric planner for this example that ignores the dynamics, the nominal trajectory would be a straight line path from $(\pi,0)$ to $(0,0)$, which gives an infeasible tracking problem for ABCD, due to the restrictions on possible trajectories of the pendulum coming from the its dynamics.
 	\begin{figure}
 		\includegraphics[width=0.45\textwidth]{figures/inverted_pendulum_plot2.eps}
-		\caption{The nominal open-loop trajectory of the $2$-dimensional pendulum. \Sadegh{Text inside the figure is very small, make it larger so that it is readable.}}
+		\caption{The nominal trajectory for the inverted pendulum.} %\Sadegh{Text inside the figure is very small, make it larger so that it is readable.}}
 		\label{fig:traj 2d pendulum}
 	\end{figure}
