--- a/intro.tex
+++ b/intro.tex
@@ -2,13 +2,10 @@
 
 \section{Introduction}
 
-
-
-We consider the \emph{decentralized} feedback controller synthesis problem for \emph{multi-agent}, nonlinear systems against temporal 
-\emph{reach-avoid} specifications.
+We consider the \emph{decentralized} feedback controller synthesis problem for \emph{multi-agent}, nonlinear systems against temporal \emph{reach-avoid} specifications.
 %
 By multi-agent, we mean that the systems under study are composed of a number of concurrently executing components.
-Each component is a modeled as a possibly nonlinear dynamical system that evolves under the influence of a control as well as an environmental
+Each component is modeled as a possibly nonlinear dynamical system that evolves under the influence of a control as well as an environmental
 disturbance.
 Our specifications require that the global state of the system eventually reaches a target while avoiding certain bad states along the way.
 While the dynamics of each component is independent of the others, the overall trajectories can be coupled by the global specification.
