--- a/prelims.tex
+++ b/prelims.tex
@@ -194,7 +194,7 @@ control specification $\mathcal{L}$.
 
 In particular, we consider \emph{reach-avoid} specifications, written as  $\lnot\avoid\, \mathcal{U}\,\goal$ in linear temporal logic, for two subsets 
 $\avoid, \goal \subseteq X^\times$.
-A trajectory $x_0, x_1, \ldots$ saisfies the reach avoid specification if there is some $j\in \mathbb{N}$ such that $x_j \in\goal$ and
+A trajectory $x_0, x_1, \ldots$ satisfies the reach avoid specification if there is some $j\in \mathbb{N}$ such that $x_j \in\goal$ and
 for all $i \in [0; j-1]$, we have $x_i \not \in\avoid$.
 
 Our notion of product of control systems is a Cartesian product of each component. Thus, we assume that the dynamics of individual control
