--- a/related_work.tex
+++ b/related_work.tex
@@ -59,7 +59,7 @@ whose goal is to ensure some safety constraints together with ensuring optimalit
 After that, they use control barrier functions for each robot for tracking the obtained nominal solution.
 Even though they consider external noise in the system, yet, when there is noise, their controllers can 
 occasionally violate the safety constraints for finite number of time steps.
-Moreover, they only consider simple linear systems (double integrators) as vehicle models.
+Moreover, they only consider simple linear systems (double integrator) as vehicle models.
 % In contrast, our method provides guarantee against worst-case system noise at all time, and in addition can support nonlinear systems. 
  
 
