modifying exp sec

--- a/references.bib
+++ b/references.bib
@@ -271,14 +271,15 @@
 	number={},
 	pages={249-258}}
 
-@INPROCEEDINGS{Srinivasan2018,
+@INPROCEEDINGS{8619113,
 	author={M. {Srinivasan} and S. {Coogan} and M. {Egerstedt}},
 	booktitle={CDC}, 
 	title={Control of Multi-Agent Systems with Finite Time Control Barrier Certificates and Temporal Logic}, 
 	year={2018},
 	volume={},
 	number={},
-	pages={1991-1996}}
+	pages={1991-1996},
+	doi={10.1109/CDC.2018.8619113}}
 
 @article{schmidt2008nonblocking,
   title={Nonblocking hierarchical control of decentralized discrete event systems},
@@ -298,14 +299,6 @@
   year={2018}
 }
 
-@INPROCEEDINGS{sun2019,
-	author={X. {Sun} and R. {Nambiar} and M. {Melhorn} and Y. {Shoukry} and P. {Nuzzo}},
-	booktitle={ICRA}, 
-	title={DoS-Resilient Multi-Robot Temporal Logic Motion Planning}, 
-	year={2019},
-	volume={},
-	number={},
-	pages={6051-6057}}
 @article{tedrake2010lqr,
   title={LQR-trees: Feedback motion planning via sums-of-squares verification},
   author={R. Tedrake and I. R. Manchester and M. Tobenkin and J.W. Roberts},
@@ -343,7 +336,7 @@
 
 @article{wongpiromsarn2012receding,
   title={Receding horizon temporal logic planning},
-  author={T. Wongpiromsarn and U. Topcu and R.M. Murray},
+  author={T. Wongpiromsarn, and U. Topcu and R.M. Murray},
   journal={IEEE Trans. Automatic Contr.},
   volume={57},
   number={11},
@@ -372,6 +365,6 @@
 	title={Intelligent planning - a decomposition and abstraction based approach},
 	author={Qiang Yang},
 	booktitle={Artificial intelligence},
-	year={1997},
+	year={1997}
 	publisher={Springer Berlin Heidelberg}
 }
